--- a/docs/.vitepress/theme/styles/main.css
+++ b/docs/.vitepress/theme/styles/main.css
@@ -1,4 +1,13 @@
 @import "./vars.css";
+
+:root {
+  /* hero标题渐变色 */
+  --vp-home-hero-name-color: transparent;
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      var(--vp-c-brand-1),
+      var(--vp-c-brand-2));
+}
+
 .vp-doc a {
   text-decoration: none;
   transition: all 0.3s ease;
@@ -6,14 +15,4 @@
 
 .vp-doc a:hover {
   text-decoration: underline;
-}
-
-:root {
-  /* hero标题渐变色 */
-  --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    var(--vp-c-brand-1),
-    var(--vp-c-brand-2)
-  );
 }
